# backend

./: .env  Makefile  database.sql  pyproject.toml
backend/: __init__.py  app.py  db.py
backend/templates/: index.html  new.html  roll.html  roll_delete.html  roll_info.html  roll_info_show.html  roll_list.html  roll_patch.html
